--- a/vote-worker/Dockerfile
+++ b/vote-worker/Dockerfile
@@ -1,4 +1,7 @@
-FROM java:7
+FROM openjdk:8-stretch
+
+ENV FROM_REDIS_HOST=1
+ENV TO_REDIS_HOST=1
 
 RUN apt-get update -qq && apt-get install -y maven && apt-get clean
 
@@ -12,4 +15,4 @@ RUN ["mvn", "verify"]
 ADD src /code/src
 RUN ["mvn", "package"]
 
-CMD ["/usr/lib/jvm/java-7-openjdk-amd64/bin/java", "-jar", "target/worker-jar-with-dependencies.jar"]
+CMD ["java", "-jar", "target/worker-jar-with-dependencies.jar"]
