--- a/redis/Jenkinsfile
+++ b/redis/Jenkinsfile
@@ -22,7 +22,7 @@ node ('main'){
     }
     stage ('DeployToCluster'){
         sh """
-            kubectl apply -f ./redis/deployment.yaml -n microservices-demo-v1
+            kubectl apply -f ./redis/deployment.yaml -n microservice-demo-v1
         """
     }
   
