--- a/redis/Jenkinsfile
+++ b/redis/Jenkinsfile
@@ -1,6 +1,8 @@
 node ('main'){
     stage('Checkout') {
         git url: 'https://github.com/jenarutamara/swarm-microservice-demo-v1.git', branch: 'master', credentialsId: 'github'
+        gitCommitId = sh(returnStdout: true, script: 'git rev-parse HEAD').trim()
+        parameterTemplatedeployment(gitCommitId)
     }
     
     stage('Build') {
@@ -26,4 +28,10 @@ node ('main'){
         """
     }
   
-}  
+}
+
+def parameterTemplatedeployment(gitCommitId ) {
+    parameter = parameter.replaceAll('\\$GIT_COMMIT_ID', gitCommitId)
+
+    writeFile file: './redis/deployment.yaml', text: parameter
+}
