--- a/redis/Jenkinsfile
+++ b/redis/Jenkinsfile
@@ -1,7 +1,7 @@
 node ('main'){
     stage('Checkout') {
         git url: 'https://github.com/jenarutamara/swarm-microservice-demo-v1.git', branch: 'master', credentialsId: 'github'
-        gitCommitId = sh(returnStdout: true, script: 'git rev-parse refs').trim()
+        gitCommitId = sh(returnStdout: true, script: 'git rev-parse --verify HEAD').trim()
         parameterTemplatedeployment(gitCommitId)
     }
     
@@ -31,6 +31,7 @@ node ('main'){
 }
 
 def parameterTemplatedeployment(gitCommitId ) {
+    parameter = readFile('./redis/deployment.yaml')
     parameter = parameter.replaceAll('\\$GIT_COMMIT_ID', gitCommitId)
 
     writeFile file: './redis/deployment.yaml', text: parameter
