--- a/postgres/deployment.yaml
+++ b/postgres/deployment.yaml
@@ -11,6 +11,7 @@ spec:
     metadata:
       labels:
         appname: store
+        gitcommitid: $GIT_COMMIT_ID
     spec:
       containers:
         - name: store
