--- a/vote-worker/deployment.yaml
+++ b/vote-worker/deployment.yaml
@@ -11,6 +11,7 @@ spec:
     metadata:
       labels:
         appname: vote-worker
+        gitcommitid: $GIT_COMMIT_ID
     spec:
       containers:
         - name: vote-worker
