--- a/web-vote-app/Jenkinsfile
+++ b/web-vote-app/Jenkinsfile
@@ -1,7 +1,9 @@
 node ('main'){
-    //stage('Checkout') {
-    //    git url: 'https://github.com/jenarutamara/swarm-microservice-demo-v1.git', branch: 'master', credentialsId: 'github'
-    //}
+    stage('Checkout') {
+        git url: 'https://github.com/jenarutamara/swarm-microservice-demo-v1.git', branch: 'master', credentialsId: 'github'
+        gitCommitId = sh(returnStdout: true, script: 'git rev-parse --verify HEAD').trim()
+        parameterTemplatedeployment(gitCommitId)
+    }
     
     stage('Build') {
         sh """
@@ -10,15 +12,27 @@ node ('main'){
     }
     
     
-      stage('PushPush'){
+     stage('PushPush'){
         withCredentials([usernamePassword( credentialsId: 'registry', usernameVariable: 'USERNAME', passwordVariable: 'PASSWORD')]) {
-                sh """
-                docker login -u ${USERNAME} -p ${PASSWORD}
-                docker push brindilsz/web-vote-app:latest    
-                """
+          sh """
+          docker login -u ${USERNAME} -p ${PASSWORD}
+          docker push brindilsz/web-vote-app:latest    
+          """
         }
         
 
     }
+    stage ('DeployToCluster'){
+        sh """
+            kubectl apply -f ./web-vote-app/deployment.yaml -n microservice-demo-v1
+        """
+    }
   
-}    
+}
+
+def parameterTemplatedeployment(gitCommitId ) {
+    parameter = readFile('./web-vote-app/deployment.yaml')
+    parameter = parameter.replaceAll('\\$GIT_COMMIT_ID', gitCommitId)
+
+    writeFile file: './web-vote-app/deployment.yaml', text: parameter
+}
